add show hide btn

--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>University App</title>
 </head>
+
 <body>
-    hello
+    <button id="show">Hide</button>
+    <div id="hide" style="display: flex; justify-content: space-around;">
+        <section>
+            <h2>Teacher Operations</h2>
+            <button id="toggleTeacherButton">Show Teacher List</button>
+            <button id="findTeacherButton">Find Teacher by ID</button>
+            <div id="findTeacherContainer" style="display: none;">
+                <label for="teacherId">Enter Teacher ID: </label>
+                <input type="text" id="teacherId" />
+                <button id="getTeacherButton">Get Teacher</button>
+                <div id="teacherInfo"></div>
+            </div>
+            <div id="teacherListContainer"></div>
 
-    <div id="data-container"></div>
-    <div id="name-container"></div>
-    <button id="fetchButton">Veriyi Al</button>
+        </section>
+
+        <section>
+            <h2>Student Operations</h2>
+            <button id="toggleStudentButton">Show Student List</button>
+            <button id="findStudentButton">Find Student by ID</button>
+            <div id="findStudentContainer" style="display: none;">
+                <label for="studentId">Enter Student ID: </label>
+                <input type="text" id="studentId" />
+                <button id="getStudentButton">Get Student</button>
+                <div id="studentInfo"></div>
+            </div>
+            <div id="studentListContainer"></div>
+
+        </section>
+    </div>
+    <div id=""></div>
     <script src="script.js"></script>
-
+    <script src="script2.js"></script>
 </body>
+
 </html>
