--- a/input.html
+++ b/input.html
@@ -5,10 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Addition</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f0f0f0; /* Light gray background */
+            padding: 20px;
+        }
+
+        #input-side {
+            max-width: 400px;
+            margin: 0 auto;
+            background-color: #fff; /* White background */
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            font-weight: bold;
+            color: #333; /* Dark gray text color */
+        }
+
+        input,
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #bbb; /* Light gray border */
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #007bff; /* Blue button background */
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Darker blue on hover */
+        }
+
+        #response {
+            margin-top: 10px;
+            color: #28a745; /* Green text color */
+        }
+    </style>
 </head>
 
 <body>
     <div id="input-side">
+        <form action="/">
+            <input type="submit" value="Go Back"/>
+        </form>
         <label style="text-decoration: underline;" for="person">Add Person</label><br />
 
         <label for="name">Name:</label><br />
@@ -22,16 +75,18 @@
             <input type="text" id="department" />
         </div>
 
-        <select style="margin-top: 10px;" id="person" name="person" onchange="showInput()">
+        <select style="margin-top: 10px;" id="person" name="person" onchange="showInput()" class="form-select">
             <option value="student">Student</option>
             <option value="teacher">Teacher</option>
         </select>
-        
+
         <button type="submit" id="postPersonbtn" style="margin-top: 10px;">Add</button>
         <h4 id="response"></h4>
     </div>
-    <script src="inputscript.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="inputscript.js"></script>
 </body>
 
 </html>
